commit for MBTA share

--- a/settings/settings.ini
+++ b/settings/settings.ini
@@ -4,9 +4,9 @@ start_time = 1000
 end_time = 9600
 episode_seed = 60
 loading_duration = 600
-timestep = 1
+timestep = 10
 
 [dir]
 sumocfg_file_name = SouthStationEdit.sumocfg
-schedule = schedule.csv
+schedule_file_name = EXAMPLE.csv
 
